main/default/objects/Business_Mechanic__c/Business_Mechanic__c.object-meta.xml
<CustomObject>
    <description>Represents a business, shop or mechanic</description>
    <label>Business/Mechanic</label>
    <nameField>
        <label>Business/Mechanic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Businesses/Mechanics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>