main/default/objects/Business_Mechanic__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The business, shop or mechanic city address</description>
    <inlineHelpText>The business, shop or mechanic city address</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>