main/default/objects/Business_Mechanic__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The business, shop or mechanic country address</description>
    <inlineHelpText>The business, shop or mechanic country address</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>