main/default/objects/Business_Mechanic__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The mechanic first name</description>
    <inlineHelpText>The mechanic first name</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>