main/default/objects/Business_Mechanic__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The mechanic last name</description>
    <inlineHelpText>The mechanic last name</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>