main/default/objects/Business_Mechanic__c/fields/Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Lattitude__c</fullName>
    <label>Lattitude</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>