main/default/objects/Business_Mechanic__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>The business, shop or mechanic mobile number</description>
    <inlineHelpText>The business, shop or mechanic mobile number</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>