main/default/objects/Business_Mechanic__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The business, shop or mechanic phone</description>
    <inlineHelpText>The business, shop or mechanic phone</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>