main/default/objects/Business_Mechanic__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The business, shop or mechanic postal code address</description>
    <inlineHelpText>The business, shop or mechanic postal code address</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>