main/default/objects/Business_Mechanic__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The business, shop or mechanic state address</description>
    <inlineHelpText>The business, shop or mechanic state address</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>