main/default/objects/Business_Mechanic__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The business, shop or mechanic street address</description>
    <inlineHelpText>The business, shop or mechanic street address</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>