main/default/objects/Business_Mechanic__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The mechanic title</description>
    <inlineHelpText>The mechanic title</inlineHelpText>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>