main/default/objects/Business_Mechanic__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Vehicle Shop</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Gas Station</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>