main/default/objects/Business_Mechanic__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>The business, shop or mechanic website</description>
    <inlineHelpText>The business, shop or mechanic website</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>